Start A Petition CTA spacing

--- a/src/styles/components/_nav.scss
+++ b/src/styles/components/_nav.scss
@@ -248,6 +248,7 @@
       svg {
         width: 24px;
         height: 24px;
+        margin-right: 2px;
         @include respond((
           display: none null inline-flex,
         ));
