Donate terms links

--- a/src/styles/components/_donate-terms-v3.scss
+++ b/src/styles/components/_donate-terms-v3.scss
@@ -25,5 +25,13 @@
         margin-top: 48px;
       }
     }
+
+    a:link,
+    a:active,
+    a:visited {
+      &:hover {
+        color: $cerulean;
+      }
+    }
   }
 }
