Quickpay legal terms update

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -45,6 +45,7 @@
 @import "components/donate-form-v3";
 @import "components/donate-terms";
 @import "components/donate-terms-v3";
+@import "components/donate-terms-nocolumn";
 @import "components/donate-confirm";
 
 // PAGE STYLES
