Paycheck option fix

--- a/src/styles/components/_donate-form.scss
+++ b/src/styles/components/_donate-form.scss
@@ -178,6 +178,10 @@ $bouncy-easing: cubic-bezier(.43,2.9,.64,.99);
 
     a {
       color: $azure;
+
+      &:hover {
+        color: $cerulean;
+      }
     }
   }
 
