--- a/src/templates/components/donate-form.twig
+++ b/src/templates/components/donate-form.twig
@@ -119,7 +119,7 @@
               <input type="radio" name="payment" id="paypal" value="paypal" required>
               <label for="paypal">PayPal</label>
             </div>
-            <p class="donate-form__paycheck-option">Or <a href="#">pay with a paycheck</a></p>
+            <p class="donate-form__paycheck-option">Or <a href="#">pay with a check</a></p>
           </div>
           {# CC FIELDS START #}
           <div class="donate-form__cc__fields">
