--- a/src/styles/components/_join.scss
+++ b/src/styles/components/_join.scss
@@ -60,7 +60,7 @@
       input:focus ~ label,
       &.active label {
         @include respond((
-          transform: (scale(0.8) translateY(-20px)) null scale(0.8) translateY(-40px)
+          transform: (scale(0.8) translateY(-20px)) null (scale(0.8) translateY(-30px)),
         ));
       }
     }
