--- a/src/styles/pages/_donate-quickpay-v3.scss
+++ b/src/styles/pages/_donate-quickpay-v3.scss
@@ -1,8 +1,17 @@
 .donate-quickpay-v3 {
 
+    .donate-form__subheading {
+      @include font(roboto-bold);
+    }
+
     .donate-form__fields {
       display: block;
       border-bottom: 0;
+
+      p {
+        font-size: 16px;
+        line-height: 36px;
+      }
 
       .donate-shortform {
         margin-left: 0;
