--- a/src/templates/components/sign-form.twig
+++ b/src/templates/components/sign-form.twig
@@ -2,12 +2,12 @@
 
   <div class="input-block">
     <input type="text" id="name" name="name" required>
-    <label for="name">Name*</label>
+    <label for="name">Name</label>
   </div>
 
   <div class="input-block">
     <input type="email" id="email" name="email" required>
-    <label for="email">Email*</label>
+    <label for="email">Email</label>
   </div>
 
   <div class="input-block">
