--- a/src/templates/components/header.twig
+++ b/src/templates/components/header.twig
@@ -15,9 +15,9 @@
             </button>
           </a>
           <ul class="nav__primary__subnav">
-            <li><a href="/petition.html">Sublink</a></li>
-            <li><a href="/petition.html">Sublink</a></li>
-            <li><a href="/petition.html">Sublink</a></li>
+            <li><a href="/petition.html">BROWSE PETITIONS</a></li>
+            <li><a href="/petition.html">START A PETITION</a></li>
+            <li><a href="/petition.html">MANAGE PETITIONS</a></li>
           </ul>
         </li>
         <li class="nav__dropdown">
