--- a/src/styles/components/_nav.scss
+++ b/src/styles/components/_nav.scss
@@ -11,6 +11,12 @@
     align-items: flex-end,
   ));
 
+  @include breakpoint(md down) {
+    overflow: auto;
+    max-height: 100vh;
+    padding-bottom: 60px;
+  }
+
   &__toggle {
     width: 24px;
     height: 24px;
