--- a/src/templates/pages/petition.twig
+++ b/src/templates/pages/petition.twig
@@ -9,7 +9,7 @@
       {% include 'components/petition-details' %}
     </div>
     <div class="petition-sign-column">
-      <div class="sticky">
+      <div>
         {% include 'components/sign-form' %}
       </div>
     </div>
