"More Reasons For Signing" CTA text update

--- a/src/templates/components/petition-details.twig
+++ b/src/templates/components/petition-details.twig
@@ -16,7 +16,7 @@
         {% include 'components/signers' %}
       </div>
       <button class="btn petition-details__comments__toggle">
-        REASONS FOR SIGNING
+        More Reasons for Signing
         {% include 'components/svg' with {id: 'caret-down'} only %}
       </button>
     </div>
