--- a/src/templates/components/sign-form-modal.twig
+++ b/src/templates/components/sign-form-modal.twig
@@ -6,7 +6,7 @@
 {% block modal_content %}
 
   <div class="sign-form-modal__heading">Sign Now</div>
-  <p class="sign-form-modal__subheading">Please provide your name and contact information.</p>
+  {# <p class="sign-form-modal__subheading">Please provide your name and contact information.</p> #}
 
   {% include 'components/sign-form' %}
 {% endblock %}
