Add mini documentation on buttons scss file

--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -1,4 +1,9 @@
 // HELPER MIXINS
+// Used to apply different buttons variations by color:
+//   btn--transparent
+//   btn--transparent-dark
+//   btn--transparent-light
+//   btn--azure
 // ------------------------------------------------
 
 @mixin include-links() {
