--- a/src/styles/styleguide/_color.scss
+++ b/src/styles/styleguide/_color.scss
@@ -1,13 +1,44 @@
 .styleguide-color {
+  border-collapse: collapse;
+
+  tbody {
+
+    tr:first-child {
+      td:first-child {
+        border-bottom: 2px solid #e6e6e6;
+      }
+    }
+
+    td {
+      padding: 5px;
+    }
+
+    td:first-child {
+      background-color: #eee;
+      text-align: center;
+    }
+  }
 
 
   &__item {
     display: block;
-    width: 50px;
-    height: 50px;
+    width: 25px;
+    height: 25px;
+    margin: auto;
+    box-shadow: 3px 3px 8px transparentize($black, .9);
+    border: 2px solid transparent;
   }
 
   &__variable {
     font-weight: bolder;
+    padding: 0 10px;
+    font-size: .8em;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+
+    &:hover {
+      text-overflow: none;
+    }
   }
 }
