--- a/src/styles/styleguide.scss
+++ b/src/styles/styleguide.scss
@@ -12,3 +12,4 @@ body.styleguide {
 @import "styleguide/block";
 @import "styleguide/color";
 @import "styleguide/breakpoints";
+@import "styleguide/headings";
