--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -14,6 +14,7 @@
 
 // COMPONENTS
 @import 'components/container';
+@import 'components/headings';
 @import 'components/buttons';
 @import 'components/lists';
 @import 'components/links';
