--- a/src/styles/styleguide.scss
+++ b/src/styles/styleguide.scss
@@ -13,3 +13,5 @@ body.styleguide {
 @import "styleguide/color";
 @import "styleguide/breakpoints";
 @import "styleguide/headings";
+@import "styleguide/buttons";
+@import "styleguide/icons";
