--- a/src/templates/pages/styleguide.twig
+++ b/src/templates/pages/styleguide.twig
@@ -108,6 +108,7 @@
                 {% block content %}
                     <div class="styleguide-buttons">
                         <button class="btn styleguide__button--azure">Simple Button</button>
+                        <button class="btn styleguide__button--azure">Button With Icon <svg><use xlink:href="#caret-right" /></svg></button>
                         <button class="btn" disabled >Disabled Button</button>
                         <br><br>
                         <h3>Available SASS mixins:</h3>
