--- a/src/templates/components/testimonial.twig
+++ b/src/templates/components/testimonial.twig
@@ -6,13 +6,12 @@
         <img src="/images/testimonial-image.jpg" alt="">
       </figure>
 
-      <div class="testimonial__text">
-        <div class="testimonial__quote">
+      <blockquote class="testimonial__text">
+        <p>
           “When a community starts to listen to each other, pull together, and work towards a common goal, the anything is possible.”
-        </div>
-        <div class="testimonial__source">— <strong>Chuck</strong>, MoveOn Mobilizer</div>
-        <span class="clearfix"></span>
-      </div>
+        </p>
+        <cite>— <strong>Chuck</strong>, MoveOn Mobilizer</cite>
+      </blockquote>
 
     </div>
   </div>
