Styleguide: Animated underline

--- a/src/styles/styleguide.scss
+++ b/src/styles/styleguide.scss
@@ -35,3 +35,4 @@ body.styleguide {
 @import "styleguide/buttons";
 @import "styleguide/icons";
 @import "styleguide/blockquote";
+@import "styleguide/animated-underline";
