Styleguide: Round Image

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -20,6 +20,7 @@
 @import 'components/lists';
 @import 'components/links';
 @import 'components/blockquote';
+@import 'components/round-image';
 @import 'components/modal';
 @import 'components/form';
 
