--- a/src/styles/styleguide.scss
+++ b/src/styles/styleguide.scss
@@ -36,3 +36,4 @@ body.styleguide {
 @import "styleguide/icons";
 @import "styleguide/blockquote";
 @import "styleguide/animated-underline";
+@import "styleguide/round-image";
