--- a/src/templates/components/testimonial.twig
+++ b/src/templates/components/testimonial.twig
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="testimonial__content">
 
-      <figure class="testimonial__image">
+      <figure class="testimonial__image round-image">
         <img src="/images/testimonial-image.jpg" alt="">
       </figure>
 
