--- a/src/styles/styleguide.scss
+++ b/src/styles/styleguide.scss
@@ -37,3 +37,4 @@ body.styleguide {
 @import "styleguide/blockquote";
 @import "styleguide/animated-underline";
 @import "styleguide/round-image";
+@import "styleguide/cta";
