Styleguide: Media block

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -23,6 +23,7 @@
 @import 'components/round-image';
 @import 'components/modal';
 @import 'components/form';
+@import 'components/media';
 
 @import 'components/header';
 @import 'components/nav';
