--- a/src/styles/styleguide.scss
+++ b/src/styles/styleguide.scss
@@ -38,3 +38,4 @@ body.styleguide {
 @import "styleguide/animated-underline";
 @import "styleguide/round-image";
 @import "styleguide/cta";
+@import "styleguide/media";
