--- a/src/templates/components/petition-card.twig
+++ b/src/templates/components/petition-card.twig
@@ -9,11 +9,13 @@
       <p>To Eric Hargan, Acting secretary of Health and Human Services and President Donald Trump</p>
 
       <div class="petition-card__media">
-        <img src="/images/petition-card-media.jpg" alt="">
-        <button class="btn petition-card__media__play"></button>
-        <div class="petition-card__meta">
-          Posted by MoveOn <br>
-          19,852 Views
+        <div class="media">
+          <img src="/images/petition-card-media.jpg" alt="">
+          <button class="btn media__play"></button>
+          <div class="media__meta">
+            Posted by MoveOn <br>
+            19,852 Views
+          </div>
         </div>
       </div>
 
